<resources>
    <string name="app_name">iRecipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scar">Kusoma unasoma unatokea Juja, unachoma unachoma unapoteza future</string>
    <string name="text_sample_food_name">Lasagne</string>
    <string name="text_cta">Check out some of our greatest hits!</string>
    <string name="text_meal_name">Vegetarian \"Lobster\" Rolls</string>
    <string name="text_ingredients">Ingredients</string>
    <string name="text_ingredient_1">hearts of palm</string>
    <string name="text_measure_1">28 oz</string>
    <string name="text_instructions">Instructions</string>
    <string name="button_back">Back</string>
    <string name="button_favourite">Favourite</string>
    <string name="yeah_i_can_cook_that">Yeah, I can cook that!</string>
    <string name="get_started">Get started</string>
    <string name="sign_in">Sign in</string>
    <string name="link_sign_in">Already have an account? Sign in</string>
    <string name="quick_question">Quick Question:</string>
    <string name="are_you_a_vegetarian">Are you a \nvegetarian?</string>
    <string name="nope_show_me_all_the_recipes">Nope, show me all the recipes</string>
    <string name="yes_hide_recipes_with_meant">Yes, hide recipes with meat</string>
    <string name="discover">Discover</string>
    <string name="nutrition_tips">Nutrition Tips</string>
    <string name="my_recipes">My Recipes</string>
    <string name="my_cook_books">My cook books</string>
    <string name="healthy_tips_for_a_healthy_life">Healthy tips for a healthy life</string>
    <string name="text_email_address">What is your email address?</string>
    <string name="text_let_s_create_you_an_account_to_proceed">Let\'s create you an account to proceed</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="text_create_account">Create account</string>
    <string name="text_login">Login</string>
    <string name="text_login_to_continue">Login to continue</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="link_don_t_have_an_account"><u>Don\'t have an account?</u></string>
    <string name="link_already_have_an_account"><u>Already have an account?</u></string>
    <string name="text_to_personalize_your_favorite_recipes_please_login">To personalize your favorite recipes \nPlease login</string>
    <string name="text_proceed_to_login">Proceed to login</string>
    <string name="text_logout">Logout</string>
</resources>