<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/middle_blue"
        tools:context=".ui.AccountSetup">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewQuickQuestion"
            android:text="@string/quick_question"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".3"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewVegetarian"
            android:text="@string/are_you_a_vegetarian"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textViewQuickQuestion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonNope"
            app:layout_constraintVertical_bias=".025" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:id="@+id/buttonNope"
            android:text="@string/nope_show_me_all_the_recipes"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/background_button_account_setup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewVegetarian"
            app:layout_constraintBottom_toTopOf="@id/buttonYes"
            android:layout_marginHorizontal="20dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:id="@+id/buttonYes"
            android:text="@string/yes_hide_recipes_with_meant"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/background_button_account_setup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonNope"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>